syntax = "proto3";

option go_package = "github.com/budsx/synapsis/inventory-service/proto;inventory";

package inventory;

service InventoryService {
    rpc CheckStock (CheckStockRequest) returns (CheckStockResponse);
    rpc ReserveStock (ReserveStockRequest) returns (ReserveStockResponse);
    rpc ReleaseStock (ReleaseStockRequest) returns (ReleaseStockResponse);
    rpc GetProductByID(GetProductByIDRequest) returns (GetProductByIDResponse);
}

message CheckStockRequest {
    int64 product_id = 1;
}

message CheckStockResponse {
    int64 product_id = 1;
    int64 stock = 2;
}

message ReserveStockRequest {
    int64 product_id = 1;
    int64 quantity = 2;
}

message ReserveStockResponse {
    bool success = 1;
}

message ReleaseStockRequest {
    int64 product_id = 1;
    int64 quantity = 2;
}

message ReleaseStockResponse {
    bool success = 1;
}

message GetProductByIDRequest {
    int64 product_id = 1;
}

message GetProductByIDResponse {
    Product product = 1;
}

message Product {
    int64 id = 1;
    string name = 2;
    int64 stock = 3;
    string created_at = 4;
    string updated_at = 5;
}